modified git ignore